--- a/src/RuminoidMetro.xaml
+++ b/src/RuminoidMetro.xaml
@@ -1,6 +1,5 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <StyleInclude Source="avares://Ruminoid.Common2.Metro/Accents/Base.xaml" />
-    <StyleInclude Source="avares://Ruminoid.Common2.Metro/Accents/ControlResources.xaml" />
-    <StyleInclude Source="avares://Ruminoid.Common2.Metro/Controls/Controls.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Accents/Base.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Controls/Controls.xaml" />
 </Styles>
