--- a/src/RuminoidMetro.xaml
+++ b/src/RuminoidMetro.xaml
@@ -2,4 +2,5 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <StyleInclude Source="avares://rmnd-metro/Accents/Base.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Controls/Controls.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Resources/Icons.xaml" />
 </Styles>
