--- a/src/Accents/Base.xaml
+++ b/src/Accents/Base.xaml
@@ -26,7 +26,7 @@
         <Color x:Key="SystemAccentColorLight3">#FFA6D8FF</Color>
 
         <!-- System Control Colors -->
-        <Color x:Key="SystemAltHighColor">#FF1E1E1E</Color>
+        <Color x:Key="SystemAltHighColor">#FF161616</Color>
         <Color x:Key="SystemAltLowColor">#33000000</Color>
         <Color x:Key="SystemAltMediumColor">#99000000</Color>
         <Color x:Key="SystemAltMediumHighColor">#CC000000</Color>
@@ -239,8 +239,6 @@
         <x:Double x:Key="ComboBoxThemeMinWidth">64</x:Double>
         <x:Double x:Key="ComboBoxPopupThemeMinWidth">80</x:Double>
         <x:Double x:Key="ComboBoxPopupThemeTouchMinWidth">240</x:Double>
-        <x:Double x:Key="ControlContentThemeFontSize">14</x:Double>
-        <x:Double x:Key="ContentControlFontSize">14</x:Double>
         <x:Double x:Key="ContentDialogMinWidth">320</x:Double>
         <x:Double x:Key="ContentDialogMaxWidth">548</x:Double>
         <x:Double x:Key="ContentDialogMinHeight">184</x:Double>
@@ -303,7 +301,6 @@
         <x:Double x:Key="TextControlBackgroundRestOpacity">0.4</x:Double>
         <x:Double x:Key="TextControlBackgroundHoverOpacity">0.6</x:Double>
         <x:Double x:Key="TextControlBackgroundFocusedOpacity">1</x:Double>
-        <x:Double x:Key="TextControlThemeMinHeight">32</x:Double>
         <x:Double x:Key="TextControlThemeMinWidth">64</x:Double>
         <x:Double x:Key="TextStyleLargeFontSize">18.14</x:Double>
         <x:Double x:Key="TextStyleExtraLargeFontSize">25.5</x:Double>
@@ -377,7 +374,6 @@
         <Thickness x:Key="SplitViewLeftBorderThemeThickness">0,0,1,0</Thickness>
         <Thickness x:Key="SplitViewRightBorderThemeThickness">1,0,0,0</Thickness>
         <Thickness x:Key="TextControlMarginThemeThickness">0,9.5,0,9.5</Thickness>
-        <Thickness x:Key="TextControlThemePadding">10,3,6,6</Thickness>
         <Thickness x:Key="HelperButtonThemePadding">0,0,-2,0</Thickness>
         <Thickness x:Key="TextControlPlaceholderThemePadding">12,5,10,5</Thickness>
         <Thickness x:Key="TimePickerHeaderThemeMargin">0,0,0,4</Thickness>
@@ -1393,7 +1389,6 @@
                         ResourceKey="SystemControlForegroundBaseMediumHighBrush" />
         <StaticResource x:Key="TreeViewItemCheckGlyphSelected" ResourceKey="SystemControlForegroundBaseMediumHighBrush" />
         <Thickness x:Key="TreeViewItemBorderThemeThickness">1</Thickness>
-        <x:Double x:Key="TreeViewItemMinHeight">32</x:Double>
         <!-- Resources for SplitView.xaml -->
         <StaticResource x:Key="SplitViewLightDismissOverlayBackground"
                         ResourceKey="SystemControlPageBackgroundMediumAltMediumBrush" />
@@ -1402,5 +1397,20 @@
         <StaticResource x:Key="CalendarDatePickerBackground" ResourceKey="SystemControlBackgroundAltMediumLowBrush" />
         <StaticResource x:Key="CalendarDatePickerForeground" ResourceKey="SystemControlForegroundBaseHighBrush" />
         <StaticResource x:Key="CalendarDatePickerBorderBrush" ResourceKey="SystemControlForegroundBaseMediumBrush" />
+
+        <!-- Compact Styles -->
+        <x:Double x:Key="ControlContentThemeFontSize">14</x:Double>
+        <x:Double x:Key="ContentControlFontSize">14</x:Double>
+        <x:Double x:Key="TextControlThemeMinHeight">24</x:Double>
+        <Thickness x:Key="TextControlThemePadding">2,2,6,1</Thickness>
+        <x:Double x:Key="ListViewItemMinHeight">32</x:Double>
+        <x:Double x:Key="TreeViewItemMinHeight">24</x:Double>
+        <Thickness x:Key="TimePickerHostPadding">0,1,0,2</Thickness>
+        <Thickness x:Key="DatePickerHostPadding">0,1,0,2</Thickness>
+        <Thickness x:Key="DatePickerHostMonthPadding">9,0,0,1</Thickness>
+        <Thickness x:Key="ComboBoxEditableTextPadding">10,0,30,0</Thickness>
+        <Thickness x:Key="ComboBoxMinHeight">24</Thickness>
+        <Thickness x:Key="ComboBoxPadding">12,1,0,3</Thickness>
+        <x:Double x:Key="NavigationViewItemOnLeftMinHeight">32</x:Double>
     </Style.Resources>
 </Style>
