--- a/src/Controls/Controls.xaml
+++ b/src/Controls/Controls.xaml
@@ -1,4 +1,6 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="Ruminoid.Common2.Metro.Controls.Controls">
+    <StyleInclude Source="avares://rmnd-metro/Controls/TabStrip.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Controls/TabStripItem.xaml" />
 </Styles>
