--- a/src/RuminoidMetro.xaml
+++ b/src/RuminoidMetro.xaml
@@ -2,5 +2,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <StyleInclude Source="avares://rmnd-metro/Styles/Accents/Base.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/Controls.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Styles/MetroControls/MetroControls.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Resources/Icons.xaml" />
 </Styles>
