feat: Add TabControl

--- a/src/Styles/Controls/Controls.xaml
+++ b/src/Styles/Controls/Controls.xaml
@@ -3,5 +3,8 @@
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/Button.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/TabStrip.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/TabStripItem.xaml" />
+    <!-- TabControl needs to come after TabStrip as it redefines the inner TabStrip.ItemsPanel-->
+    <StyleInclude Source="avares://rmnd-metro/Styles/Controls/TabControl.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Styles/Controls/TabItem.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/ToggleButton.xaml" />
 </Styles>
