--- a/src/Styles/Controls/TabItem.xaml
+++ b/src/Styles/Controls/TabItem.xaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Design.PreviewWith>
         <Border>
-            <StackPanel Spacing="4">
+            <StackPanel Spacing="4" Orientation="Horizontal">
                 <TabItem Header="Leaf" />
                 <TabItem Header="Arch" IsSelected="True" />
                 <TabItem Header="Arch" IsEnabled="False" />
@@ -21,21 +21,27 @@
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Template">
             <ControlTemplate>
-                <Border Name="PART_LayoutRoot"
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        Padding="{TemplateBinding Padding}">
-                    <Panel>
-                        <ContentPresenter Name="PART_ContentPresenter"
-                                          ContentTemplate="{TemplateBinding HeaderTemplate}"
-                                          Content="{TemplateBinding Header}"
-                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                          TextBlock.FontFamily="{TemplateBinding FontFamily}"
-                                          TextBlock.FontSize="{TemplateBinding FontSize}"
-                                          TextBlock.FontWeight="{TemplateBinding FontWeight}" />
-                    </Panel>
-                </Border>
+                <Grid>
+                    <Border Name="PART_LayoutRoot"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Padding="{TemplateBinding Padding}">
+                        <Panel>
+                            <ContentPresenter Name="PART_ContentPresenter"
+                                              ContentTemplate="{TemplateBinding HeaderTemplate}"
+                                              Content="{TemplateBinding Header}"
+                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                              TextBlock.FontFamily="{TemplateBinding FontFamily}"
+                                              TextBlock.FontSize="{TemplateBinding FontSize}"
+                                              TextBlock.FontWeight="{TemplateBinding FontWeight}" />
+
+                        </Panel>
+                    </Border>
+                    <Grid
+                        Name="PART_Cover"
+                        Background="White" />
+                </Grid>
             </ControlTemplate>
         </Setter>
     </Style>
@@ -51,5 +57,17 @@
 
     <Style Selector="TabItem:selected">
         <Setter Property="Background" Value="{DynamicResource SystemControlHighlightAltAccentBrush}" />
+    </Style>
+
+    <Style Selector="TabItem /template/ Grid#PART_Cover">
+        <Setter Property="Opacity" Value="0" />
+        <Setter Property="Transitions">
+            <Transitions>
+                <DoubleTransition Property="Opacity" Duration="0:0:0.05" />
+            </Transitions>
+        </Setter>
+    </Style>
+    <Style Selector="TabItem:pointerover /template/ Grid#PART_Cover">
+        <Setter Property="Opacity" Value="0.2" />
     </Style>
 </Styles>
