--- a/src/Styles/Controls/Controls.xaml
+++ b/src/Styles/Controls/Controls.xaml
@@ -1,6 +1,7 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/Button.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Styles/Controls/RadioButton.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/TabStrip.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/TabStripItem.xaml" />
     <!-- TabControl needs to come after TabStrip as it redefines the inner TabStrip.ItemsPanel-->
