--- a/src/Styles/Controls/Controls.xaml
+++ b/src/Styles/Controls/Controls.xaml
@@ -3,6 +3,8 @@
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/Button.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/CheckBox.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/ComboBox.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Styles/Controls/ListBox.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Styles/Controls/ListBoxItem.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/Menu.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/ContextMenu.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/MenuItem.xaml" />
