--- a/src/Styles/Accents/Base.xaml
+++ b/src/Styles/Accents/Base.xaml
@@ -1398,19 +1398,18 @@
         <StaticResource x:Key="CalendarDatePickerForeground" ResourceKey="SystemControlForegroundBaseHighBrush" />
         <StaticResource x:Key="CalendarDatePickerBorderBrush" ResourceKey="SystemControlForegroundBaseMediumBrush" />
 
-        <!-- Compact Styles -->
         <x:Double x:Key="ControlContentThemeFontSize">14</x:Double>
         <x:Double x:Key="ContentControlFontSize">14</x:Double>
-        <x:Double x:Key="TextControlThemeMinHeight">24</x:Double>
-        <Thickness x:Key="TextControlThemePadding">2,2,6,1</Thickness>
-        <x:Double x:Key="ListViewItemMinHeight">32</x:Double>
-        <x:Double x:Key="TreeViewItemMinHeight">24</x:Double>
-        <Thickness x:Key="TimePickerHostPadding">0,1,0,2</Thickness>
-        <Thickness x:Key="DatePickerHostPadding">0,1,0,2</Thickness>
-        <Thickness x:Key="DatePickerHostMonthPadding">9,0,0,1</Thickness>
-        <Thickness x:Key="ComboBoxEditableTextPadding">10,0,30,0</Thickness>
-        <Thickness x:Key="ComboBoxMinHeight">24</Thickness>
-        <Thickness x:Key="ComboBoxPadding">12,1,0,3</Thickness>
-        <x:Double x:Key="NavigationViewItemOnLeftMinHeight">32</x:Double>
+        <x:Double x:Key="TextControlThemeMinHeight">32</x:Double>
+        <Thickness x:Key="TextControlThemePadding">10,3,6,6</Thickness>
+        <!--<x:Double x:Key="ListViewItemMinHeight">32</x:Double>-->
+        <x:Double x:Key="TreeViewItemMinHeight">32</x:Double>
+        <!--<Thickness x:Key="TimePickerHostPadding">0,3,0,6</Thickness>-->
+        <!--<Thickness x:Key="DatePickerHostPadding">0,3,0,6</Thickness>-->
+        <!--<Thickness x:Key="DatePickerHostMonthPadding">9,3,0,6</Thickness>-->
+        <!--<Thickness x:Key="ComboBoxEditableTextPadding">11,5,32,6</Thickness>-->
+        <!--<Thickness x:Key="ComboBoxMinHeight">32</Thickness>-->
+        <!--<Thickness x:Key="ComboBoxPadding">12,5,0,7</Thickness>-->
+        <!--<x:Double x:Key="NavigationViewItemOnLeftMinHeight">32</x:Double>-->
     </Style.Resources>
 </Style>
