--- a/src/Styles/Controls/Controls.xaml
+++ b/src/Styles/Controls/Controls.xaml
@@ -15,6 +15,10 @@
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/ProgressBar.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/RadioButton.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/RepeatButton.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Styles/Controls/Separator.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Styles/Controls/Slider.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Styles/Controls/ScrollBar.xaml" />
+    <StyleInclude Source="avares://rmnd-metro/Styles/Controls/ScrollViewer.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/TabStrip.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/Controls/TabStripItem.xaml" />
     <!-- TabControl needs to come after TabStrip as it redefines the inner TabStrip.ItemsPanel-->
