--- a/src/Styles/MetroControls/MetroControls.xaml
+++ b/src/Styles/MetroControls/MetroControls.xaml
@@ -1,5 +1,6 @@
 ﻿<Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <StyleInclude Source="avares://rmnd-metro/Styles/MetroControls/Button.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/MetroControls/DrawingIcon.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/MetroControls/DrawingIconButton.xaml" />
     <StyleInclude Source="avares://rmnd-metro/Styles/MetroControls/DrawingIconMenuItem.xaml" />
