--- a/src/Styles/Controls/TextBox.xaml
+++ b/src/Styles/Controls/TextBox.xaml
@@ -123,7 +123,7 @@
     </Style>
 
     <Style Selector="TextBox:pointerover /template/ Border#PART_BorderElement">
-        <Setter Property="BorderBrush" Value="{DynamicResource TextControlBorderBrushPointerOver}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource AccentButtonBackground}" />
         <Setter Property="Background" Value="{DynamicResource TextControlBackgroundPointerOver}" />
     </Style>
 
