feat: Style Update

--- a/src/Styles/Controls/GridSplitter.xaml
+++ b/src/Styles/Controls/GridSplitter.xaml
@@ -4,7 +4,8 @@
         <Setter Property="Focusable" Value="True" />
         <Setter Property="MinWidth" Value="4" />
         <Setter Property="MinHeight" Value="4" />
-        <Setter Property="Background" Value="{DynamicResource SystemAltMediumLowColor}" />
+        <!--<Setter Property="Background" Value="{DynamicResource SystemAltMediumLowColor}" />-->
+        <Setter Property="Background" Value="#33FFFFFF" />
         <Setter Property="PreviewContent">
             <Template>
                 <Rectangle Fill="{DynamicResource SystemAccentColor}" />
